- start.sh script now requires TEI_DIR to be set to execute. - indexer container is kept running for dev purposes (indexer.py is run externally)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,15 +64,22 @@ services:
         build: 
             context: indexer
             dockerfile: Dockerfile.indexer
+        image: python:3.6-slim
+        restart: always
+        volumes:
+            - ./indexer:/app
+            - ${TEI_DIR}:/app/data
         depends_on:
             - elasticsearch
         networks:
             - esnet
         container_name: indexer
+        command: tail -f /dev/null
 
 volumes:
   esdata:
     driver: local
+  
 
 networks:
     esnet:
