--- a/indexer/Dockerfile.indexer
+++ b/indexer/Dockerfile.indexer
@@ -2,5 +2,5 @@ FROM python:3.6-slim
 WORKDIR /app
 ADD . /app
 RUN pip install -r requirements.txt
-ENTRYPOINT [ "python" ]
-CMD [ "indexer.py" ]
+#ENTRYPOINT [ "python" ]
+#CMD [ "indexer.py" ]
